<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFF4" >

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:background="@color/top_bar_normal_bg"
        android:gravity="center_vertical" >

        <include layout="@layout/commom_back_btn" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/container_remove"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/common_tab_bg"
            android:onClick="emptyHistory" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="9dp"
                android:scaleType="centerInside"
                android:src="@drawable/mm_title_remove" />
        </RelativeLayout>

    </RelativeLayout>

   
    
    <LinearLayout
        android:id="@+id/bar_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/rl_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#aaffffff"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            android:paddingTop="4dp" >


            <Button
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginLeft="6dp"
                android:background="@drawable/type_select_btn"
                android:onClick="more" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:background="@drawable/chat_press_speak_btn"
                  android:id="@+id/btn_press_to_speak"
                  android:visibility="gone"
                android:gravity="center" >


                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_pushtotalk"
                    android:textColor="#fff"
                    android:textSize="18sp" />
            </LinearLayout>

            <com.easemob.chatuidemo.widget.PasteEditText
                android:id="@+id/et_sendmessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:background="@drawable/chat_edit"
                android:maxLines="3"
                android:minHeight="40dp"
                android:onClick="editClick"
                android:padding="5dp"
                android:textSize="18sp"
                 />

            <Button
                android:id="@+id/btn_set_mode_voice"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/chatting_setmode_voice_btn"
                android:onClick="setModeVoice"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_set_mode_keyboard"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/chatting_setmode_keyboard_btn"
                android:onClick="setModeKeyboard"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="54dp"
                android:layout_height="39dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/chat_send_btn_selector"
                android:onClick="onClick"
                android:text="@string/button_send"
                android:textColor="#fff"
                android:textSize="16sp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EFEFF4"
            android:orientation="vertical"
            android:visibility="visible" >

            <!-- 表情图片 -->

            <LinearLayout
                android:id="@+id/ll_face_container"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:visibility="gone" >

                <android.support.v4.view.ViewPager
                    android:id="@+id/vPager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- 图片，表情，名片等按钮 -->

            <LinearLayout
                android:id="@+id/ll_btn_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="6dp"
                    android:weightSum="4" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <RelativeLayout
                            android:layout_width="64dp"
                            android:layout_height="64dp" >

                            <ImageView
                                android:id="@+id/btn_take_picture"
                                android:layout_width="56dp"
                                android:layout_height="56dp"
                                android:layout_centerInParent="true"
                                android:background="@drawable/chat_takepic_selector"
                                android:clickable="true"
                                android:onClick="onClick"
                                android:scaleType="fitCenter" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/attach_take_pic"
                            android:textColor="#727171" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <RelativeLayout
                            android:layout_width="64dp"
                            android:layout_height="64dp" >

                            <ImageView
                                android:id="@+id/btn_picture"
                                android:layout_width="56dp"
                                android:layout_height="56dp"
                                android:layout_centerInParent="true"
                                android:background="@drawable/chat_image_selector"
                                android:clickable="true"
                                android:onClick="onClick"
                                android:scaleType="fitCenter" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/attach_picture"
                            android:textColor="#727171" />
                    </LinearLayout>

<LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <RelativeLayout
                            android:layout_width="64dp"
                            android:layout_height="64dp" >

                            <ImageView
                                android:id="@+id/btn_location"
                                android:layout_width="56dp"
                                android:layout_height="56dp"
                                android:layout_centerInParent="true"
                                android:clickable="true"
                                android:onClick="onClick"
                                android:scaleType="fitCenter"
                                android:src="@drawable/chat_location_selector" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/attach_location"
                            android:textColor="#727171" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <RelativeLayout
                            android:layout_width="64dp"
                            android:layout_height="64dp" >

                            <ImageView
                                android:id="@+id/btn_smile"
                                android:layout_width="56dp"
                                android:layout_height="56dp"
                                android:layout_centerInParent="true"
                                android:background="@drawable/chat_face_selector"
                                android:clickable="true"
                                android:onClick="onClick"
                                android:scaleType="fitCenter" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/attach_smile"
                            android:textColor="#727171" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bar_bottom"
        android:layout_below="@id/top_bar" >

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="#00000000"
            android:divider="@null"
            android:dividerHeight="5dp"
            android:listSelector="#00000000"
            android:scrollbarStyle="outsideOverlay" 
            android:transcriptMode="alwaysScroll"
            />

        <RelativeLayout
            android:id="@+id/recording_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/recording_hint_bg"
            android:padding="10dp"
            android:visibility="invisible" >

            <ImageView
                android:id="@+id/mic_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/record_animate_01" />

            <TextView
                android:id="@+id/recording_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mic_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:text="@string/move_up_to_cancel"
                android:textSize="10sp" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>